<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preference_user"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/preference_user" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preference_server"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/edtIp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preference_server" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preference_pswd"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/edtPassowrd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preference_pswd" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preference_base"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/edtDbName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preference_base" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="salvarPreferencias"
        android:text="@string/salvar" />
</LinearLayout>